Remove extra margin from fix list

--- a/src/injected/styles/injected.scss
+++ b/src/injected/styles/injected.scss
@@ -376,7 +376,7 @@
             font-size: 14px !important;
 
             ul {
-                margin: 8px !important;
+                margin: 8px 8px 0px 8px !important;
                 padding-left: 8px !important;
             }
         }
